objects/JBCXM__TransHeader__c.object
<CustomObject>
    <description>Transactions represent atomic financial transactions with a Customer. Header information of each transaction is stored as One Record in this object.</description>
    <fields>
        <fullName>JBCXM__ASVTotal__c</fullName>
        <description>Total amount entered into the Transaction - usually during renewals.</description>
        <inlineHelpText>Total amount entered into the Transaction - usually during renewals.</inlineHelpText>
        <label>ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Annual Subscription Value.</description>
        <inlineHelpText>Annual Subscription Value calculated based on the Booking and Term.</inlineHelpText>
        <label>ASV Delta</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <description>Reference to CustomerInfo Record</description>
        <inlineHelpText>Reference to CustomerInfo Record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Header</relationshipLabel>
        <relationshipName>TransHeader</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectDisplayValue__c</fullName>
        <inlineHelpText>Associate Object Display Value</inlineHelpText>
        <label>Associated Object Display Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordID__c</fullName>
        <inlineHelpText>Associated Object record ID</inlineHelpText>
        <label>Associated Object Record ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordValue__c</fullName>
        <inlineHelpText>Associated Object Value</inlineHelpText>
        <label>Associated Object Record Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__BookingNumber__c</fullName>
        <description>Optional Reference number from external systems.</description>
        <externalId>true</externalId>
        <inlineHelpText>Optional Reference number from external systems.</inlineHelpText>
        <label>Booking Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__ChurnReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Churn Reason (applicable for Churn Transactions only). Churn reasons are customizable by adding records into PickList object.</description>
        <inlineHelpText>Select Churn Reason (applicable for Churn Transactions only).</inlineHelpText>
        <label>Churn Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header (Churn Reason)</relationshipLabel>
        <relationshipName>TransHeaderChurnReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comment__c</fullName>
        <description>Enter optional commentary on the Transaction</description>
        <inlineHelpText>Enter optional commentary on the Transaction</inlineHelpText>
        <label>Comment</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerName__c</fullName>
        <description>Customer Name (auto populated)</description>
        <formula>JBCXM__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Name (auto populated)</inlineHelpText>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>Transaction Date</inlineHelpText>
        <label>Booking Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__FcstASV__c</fullName>
        <description>Forecast ASV.</description>
        <inlineHelpText>Forecast ASV.</inlineHelpText>
        <label>Fcst ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__FcstBookingDate__c</fullName>
        <description>Forecast Booking Date</description>
        <inlineHelpText>Forecast Booking Date</inlineHelpText>
        <label>Fcst Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__FcstMRR__c</fullName>
        <description>Forecast MRR</description>
        <inlineHelpText>Forecast MRR</inlineHelpText>
        <label>Fcst MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__FcstUser__c</fullName>
        <description>Forecast user</description>
        <inlineHelpText>Forecast user</inlineHelpText>
        <label>Fcst User</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRRTotal__c</fullName>
        <description>Total amount entered into the Transaction - usually during renewals.</description>
        <inlineHelpText>Total amount entered into the Transaction - usually during renewals.</inlineHelpText>
        <label>MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Monthly Recurring Revenue</description>
        <inlineHelpText>Monthly Recurring Revenue calculated based on Booking Amount and Term</inlineHelpText>
        <label>MRR Delta</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Main__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There should be only main transaction at one time. Usually the New Business or the most Resent Renewal transaction available for a Customer.</description>
        <inlineHelpText>There should be only main transaction at one time. Usually the New Business or the most Resent Renewal transaction available for a Customer.</inlineHelpText>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Name__c</fullName>
        <description>Transaction Name - Defaulted to Opportunity Name if the connector is used or the Booking Type if the Opportunity is not mapped.</description>
        <inlineHelpText>Transaction Name - Defaulted to Opportunity Name if the connector is used or the Booking Type if the Opportunity is not mapped.</inlineHelpText>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextRenewalDate__c</fullName>
        <description>Next Renewal Date</description>
        <inlineHelpText>Next Renewal Date</inlineHelpText>
        <label>RenewalDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTimeRevenue__c</fullName>
        <description>One-time revenue</description>
        <inlineHelpText>One-time revenue</inlineHelpText>
        <label>OneTime</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity record from that triggered the creation of the transaction object</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transaction Header</relationshipLabel>
        <relationshipName>Transaction_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OrderType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>New Business: First business transaction&lt;br&gt;&lt;br&gt;Renewal: Renewal date auto populated &lt;br&gt;&lt;br&gt;Upsell / Downsell: Subsequent Upsell or Downsell transactions&lt;br&gt;&lt;br&gt;Debook: Any corrections to the previously booked amounts&lt;br&gt;&lt;br&gt;Churn: Churn transaction</inlineHelpText>
        <label>Booking Type</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header (Order Type)</relationshipLabel>
        <relationshipName>TransHeaderOrderType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalContract__c</fullName>
        <description>Contract Number is an optional reference used in the external systems.</description>
        <inlineHelpText>Contract Number is an optional reference used in the external systems.</inlineHelpText>
        <label>Original Contract</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParentTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>JBCXM__TransHeader__c</referenceTo>
        <relationshipLabel>Transaction Header (Parent Transaction)</relationshipLabel>
        <relationshipName>ParentTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Renewable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>All transactions that have recurring component are renewable. Transaction that have only a fixed revenue component are not renewable</description>
        <inlineHelpText>All transactions that have recurring component are renewable. Transaction that have only a fixed revenue component are not renewable</inlineHelpText>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transaction Header (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Transaction_Header_Renewal_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalStatus__c</fullName>
        <inlineHelpText>This field defines the renewal status of the current transaction. For transactions that are renewable, there are four status Open, Closed - Renewed, Closed -Lost, Closed - Will not renew</inlineHelpText>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed - Renewed</fullName>
                </value>
                <value>
                    <fullName>Closed - Co-Termed</fullName>
                </value>
                <value>
                    <fullName>Closed - Will not renew</fullName>
                </value>
                <value>
                    <fullName>Not renewable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this transaction is Renewable and Renewed (Even Renewal with upsell/Downsell), The Renewal transaction look. This is a self relation object</description>
        <inlineHelpText>If this transaction is Renewable and Renewed (Even Renewal with upsell/Downsell), The Renewal transaction look. This is a self relation object</inlineHelpText>
        <label>Renewal Transaction</label>
        <referenceTo>JBCXM__TransHeader__c</referenceTo>
        <relationshipLabel>Transaction Header (Renewed Transaction)</relationshipLabel>
        <relationshipName>Transaction_Header_Reneweal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecEndDate__c</fullName>
        <description>Deferred Revenue Recognition End Date</description>
        <inlineHelpText>Deferred Revenue Recognition End Date</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecStartDate__c</fullName>
        <description>Deferred Revenue Recognition Start Date</description>
        <inlineHelpText>Deferred Revenue Recognition Start Date</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Representative</description>
        <inlineHelpText>Sales Representative (optional field)</inlineHelpText>
        <label>SalesRep</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header (Sales Rep)</relationshipLabel>
        <relationshipName>TransHeaderSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term_Fractional__c</fullName>
        <description>Term in months and accepts fractional months</description>
        <inlineHelpText>Term in months and accepts fractional months</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term__c</fullName>
        <description>Booking Term in Months</description>
        <inlineHelpText>Booking Term in whole Months</inlineHelpText>
        <label>Term (Depricated)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsersTotal__c</fullName>
        <description>Total amount entered into the Transaction - usually during renewals.</description>
        <inlineHelpText>Total amount entered into the Transaction - usually during renewals.</inlineHelpText>
        <label>Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <description>User licenses/count</description>
        <inlineHelpText>User licenses/count</inlineHelpText>
        <label>Users Delta</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transactions Header</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__CustomerName__c</columns>
        <columns>JBCXM__BookingNumber__c</columns>
        <columns>JBCXM__OrderType__c</columns>
        <columns>JBCXM__Date__c</columns>
        <columns>JBCXM__RevRecStartDate__c</columns>
        <columns>JBCXM__RevRecEndDate__c</columns>
        <columns>JBCXM__ASV__c</columns>
        <columns>JBCXM__MRR__c</columns>
        <columns>JBCXM__OneTimeRevenue__c</columns>
        <columns>JBCXM__Users__c</columns>
        <columns>JBCXM__NextRenewalDate__c</columns>
        <columns>JBCXM__Term__c</columns>
        <columns>JBCXM__Renewable__c</columns>
        <columns>JBCXM__RenewalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ord-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>